--- a/Henning_Portfolio/Henning_PortStyles.css
+++ b/Henning_Portfolio/Henning_PortStyles.css
@@ -20,7 +20,7 @@
 
 
 .Bilde {
-    max-width: 500px;
+    max-width: 45%;
     height: auto;
     opacity: 0;
     animation: fadeIn 0.85s ease-in forwards;
