--- a/Henning_PortStyles.css
+++ b/Henning_PortStyles.css
@@ -139,3 +139,52 @@ footer:hover {
 color: #28384d;
 text-decoration: underline;
 }
+
+/* Media Queries for Mobile Devices */
+@media screen and (max-width: 768px) {
+    .Navnet {
+        position: static;
+        text-align: center;
+        margin: 20px 0;
+        padding-top: 20px;
+    }
+
+    .Meny {
+        position: static;
+        display: flex;
+        justify-content: center;
+        padding: 0;
+        margin: 20px 0;
+    }
+
+    .Meny li {
+        padding: 0 15px;
+    }
+
+    .Galleri {
+        padding-top: 20px;
+        gap: 50px;
+    }
+
+    .Bilde {
+        max-width: 90%;
+    }
+
+    .About {
+        padding-left: 20px;
+        padding-right: 20px;
+        align-items: center;
+    }
+
+    .About p {
+        font-size: 18px;
+        max-width: 100%;
+        padding: 0 20px;
+    }
+
+    .About-header {
+        font-size: 24px;
+        text-align: center;
+        width: 100%;
+    }
+}
